# RSP

catkin_ws/moving_catkin/: frames.gv  params.yaml
catkin_ws/moving_catkin/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/moving_catkin/devel/include/ar_track_alvar/: ParamsConfig.h
catkin_ws/moving_catkin/devel/include/edumip_msgs/: EduMipState.h
catkin_ws/moving_catkin/devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h  ResizeConfig.h
catkin_ws/moving_catkin/devel/include/image_publisher/: ImagePublisherConfig.h
catkin_ws/moving_catkin/devel/include/image_rotate/: ImageRotateConfig.h
catkin_ws/moving_catkin/devel/include/image_view/: ImageViewConfig.h
catkin_ws/moving_catkin/devel/include/stereo_image_proc/: DisparityConfig.h
catkin_ws/moving_catkin/devel/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
catkin_ws/moving_catkin/devel/lib/edumip_my_robot/: edumip_my_robot_publisher  edumip_nav_publisher  edumip_tf_stabilizer
catkin_ws/moving_catkin/devel/lib/goal_assigner_naive/: goal_assigner  goal_assigner_2  goal_assigner_3  goal_assigner_flying_v  goal_assigner_square  goal_assigner_verticle
catkin_ws/moving_catkin/devel/lib/image_proc/: image_proc
catkin_ws/moving_catkin/install/: .rosinstall  _setup_util.py  setup.sh
catkin_ws/moving_catkin/src/: frames.gv
catkin_ws/moving_catkin/src/edumip_my_robot/: CMakeLists.txt  package.xml
catkin_ws/moving_catkin/src/goal_assigner/: CMakeLists.txt  package.xml
catkin_ws/moving_catkin/src/goal_assigner/launch/: pos_1.launch
catkin_ws/moving_catkin/src/goal_assigner_naive/: CMakeLists.txt
catkin_ws/moving_catkin/src/goal_assigner_naive/launch/: assign.launch  assign_2.launch  assign_flying_v.launch  assign_horizontal.launch  assign_square.launch  assign_verticle.launch
catkin_ws/moving_catkin/src/goal_assigner_naive/src/: goal_assigner.cpp  goal_assigner_2.cpp  goal_assigner_3.cpp  goal_assigner_flying_v.cpp  goal_assigner_square.cpp  goal_assigner_verticle.cpp
catkin_ws/moving_catkin/src/goal_twist/: CMakeLists.txt  package.xml
catkin_ws/moving_catkin/src/joy_twist/: CMakeLists.txt  README.txt
catkin_ws/moving_catkin/src/learning_joy/: CMakeLists.txt  package.xml
catkin_ws/moving_catkin/src/r2d2/: CMakeLists.txt
catkin_ws/moving_catkin/src/testbot_description/: CMakeLists.txt
catkin_ws/moving_catkin/src/tf_laser/: CMakeLists.txt
catkin_ws/moving_catkin/src/tf_multi_parser/: CMakeLists.txt  package.xml
(+146 files in other folders)
